[package]
name = "gui_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
tokio = { version = "1.26.0", features = ["full"] }
serde_json = "1"
egui = "0.22.0"
eframe = "0.22.0"

